[gd_scene load_steps=4 format=2]

[ext_resource path="res://Levels/UI/FgHealth.png" type="Texture" id=1]
[ext_resource path="res://Levels/UI/water_gauge.png" type="Texture" id=2]
[ext_resource path="res://Levels/UI/Gauges.gd" type="Script" id=3]

[node name="Gauges" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )

[node name="Health" type="TextureProgress" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 734.0
margin_top = 30.0
margin_right = 984.0
margin_bottom = 125.0
value = 100.0
texture_progress = ExtResource( 1 )
fill_mode = 1

[node name="Water" type="TextureProgress" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = 734.0
margin_top = 80.0
margin_right = 955.0
margin_bottom = 96.0
texture_progress = ExtResource( 2 )
fill_mode = 1

[node name="Tween" type="Tween" parent="."]

[node name="tweenNozzleUp" type="Tween" parent="."]

[node name="tweenNozzleDown" type="Tween" parent="."]

[node name="tweenWait" type="Timer" parent="."]

[connection signal="timeout" from="tweenWait" to="." method="_on_tweenWait_timeout"]
